# rabbitmq-metronome

./: .gitignore  .hgignore  .travis.yml  BAZEL.md  BUILD.bazel  MODULE.bazel  Makefile  README  WORKSPACE.bazel  package.mk  rabbitmq.config
.github/workflows/: test.yml
ebin/: rabbit_metronome.app  rabbitmq_metronome.app  rabbitmq_metronome.app.in
src/: rabbit_metronome.erl  rabbit_metronome_sup.erl  rabbit_metronome_worker.erl  rabbit_pgauth.erl  rabbit_pgauth_sup.erl  rabbit_pgauth_worker.erl  rabbitmq_metronome.app.src
test/: metronome_SUITE.erl  rabbit_metronome_tests.erl
test/src/: rabbit_metronome_tests.erl
